[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compgraph"
version = "0.0.1"
readme = "LIB_README.md"
description = "Library for big data processing based on MapReduce paradigm."
requires-python = ">=3.12.5"
authors = [
    { name = "perkyfever", email = "dteakhperky@gmail.com" }
]

[tool.setuptools]
packages = ["compgraph"]
